--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div class="world" id="world"></div>
+    <canvas id="canvas"></canvas>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
