--- a/index.html
+++ b/index.html
@@ -7,8 +7,23 @@
     <title>Vite + TS</title>
   </head>
   <body>
-    <div class="world" id="world"></div>
-    <canvas id="canvas"></canvas>
+    <div class="flex h-screen bg-black">
+      <div class="w-1/2 flex flex-col justify-center px-8 text-white">
+        <div style="max-width: 500px;" class="mx-auto">
+          <h1 class="text-4xl mb-8">Lorem ipsum dolor sit amet.</h1>
+          <p class="text-gray-400 mb-8">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda
+            iste quo sint praesentium illo quos! Et ea culpa esse quam.
+          </p>
+          <a href="" class="bg-green-600 inline-block px-8 py-4 rounded-full"
+            >Started</a
+          >
+        </div>
+      </div>
+      <div class="w-1/2">
+        <canvas id="canvas" class="w-full h-full"></canvas>
+      </div>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
