--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     <title>Vite + TS</title>
   </head>
   <body>
+    <div id="popupEl" class="bg-black bg-opacity-75 fixed p-4">
+      <h2 class="text-white">Population</h2>
+      <p class="text-white font-bold text-lg">300mil</p>
+    </div>
     <div class="flex h-screen bg-black">
       <div class="w-1/2 flex flex-col justify-center px-8 text-white">
-        <div style="max-width: 500px;" class="mx-auto">
+        <div style="max-width: 500px" class="mx-auto">
           <h1 class="text-4xl mb-8">Lorem ipsum dolor sit amet.</h1>
           <p class="text-gray-400 mb-8">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda
