add resize function (not finished yet)

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       <h2 class="text-white">Population</h2>
       <p class="text-white font-bold text-lg">300mil</p>
     </div>
-    <div class="flex h-screen bg-black">
-      <div class="w-1/2 flex flex-col justify-center px-8 text-white">
+    <div class="xl:flex h-screen bg-black">
+      <div class="xl:w-1/2 flex flex-col justify-center px-8 pt-16 xl:pt-0 text-white">
         <div style="max-width: 500px" class="mx-auto">
           <h1 class="text-4xl mb-8">Lorem ipsum dolor sit amet.</h1>
           <p class="text-gray-400 mb-8">
@@ -24,7 +24,7 @@
           >
         </div>
       </div>
-      <div class="w-1/2">
+      <div class="h-screen xl:w-1/2">
         <canvas id="canvas" class="w-full h-full"></canvas>
       </div>
     </div>
